# hexlet-friends

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  INSTALLATION.md  Makefile  Procfile  README.md  db_fixture.json  docker-compose.yml  docker-start.sh  manage.py  organizations.txt  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yml  hide_repo.md
.github/workflows/: CI.yml
accounts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/: apps.py  context_processors.py  tests.py  urls.py
app/admin/: __init__.py  contribution.py  contributor.py  organization.py  profile.py  repository.py
app/forms/: __init__.py  registration.py
app/hooks/: base.py  decorators.py  pull_request.py  urls.py
app/migrations/: 0001_initial.py  0002_auto_20190930_1727.py  0003_auto_20191001_0024.py  0004_contributor_avatar_url.py
app/models/: __init__.py  base.py  contribution.py  contributions.py  contributor.py  organization.py  profile.py  repository.py
app/tests/: test_auth.py  test_home_page.py
app/utils/: fetch_info_from_github.py  github_webhook.py  populate_db_start_data.py
app/views/: __init__.py  contributor.py  contributors.py  home.py  index.py  organization.py  organizations.py  registration.py  repositories.py  repository.py  webhook.py
auth/: admin.py  apps.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
auth/migrations/: 0001_initial.py  0002_alter_siteuser_first_name.py  0003_groupuser.py  0004_alter_siteuser_groups.py  0005_alter_siteuser_groups.py  0006_siteuser_github_token.py
config/: celery.py  middlewares.py  settings.py  urls.py  wsgi.py
config/settings/: local_example.py  main.py
contributors/: admin.py  apps.py  context_processors.py  models.py  signals.py  sitemap.py  tasks.py  tests.py  urls.py  views.py
contributors/admin/: __init__.py  base.py  contribution.py  contribution_label.py  contributor.py  custom.py  label.py  organization.py  project.py  projects.py  repository.py
contributors/fixtures/: contributionlabel.json  contributions.json  contributors.json  issues.json  labels.json  organizations.json  projects.json  repositories.json
contributors/forms/: __init__.py  admin_forms.py  forms.py
contributors/models/: base.py  (+10 more)
dump_data/: dump-hexlet-friends.sql
erd-diagrams/: erd.dot
static/: robots.txt
templates/: about.html  achievements_list.html  base.html  contributor_compare_with_yourself.html  contributor_details.html  contributor_issues.html  contributor_prs.html  contributors_for_month.html  contributors_for_period.html  contributors_list.html  home.html  index.html  landing.html  leaderboard_commits.html  leaderboard_issues.html  leaderboard_prs.html  list_as_table.html  open_issues.html  open_issues_list.html  organization_details.html  organizations_list.html  project_details.html  projects_list.html  pull_requests_list.html  repositories_list.html  repository_details.html  robots.txt
(+180 files in other folders)
