[project]
name = "hexlet-friends"
version = "0.1.0"
description = "hexlet friends open-source project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "celery>=5.4.0",
    "crispy-bootstrap5>=2024.10",
    "cryptography>=43.0.3",
    "dj-database-url>=2.3.0",
    "django-bmemcached>=0.3.0",
    "django-crispy-forms>=2.3",
    "django-cte>=1.3.3",
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-mathfilters>=1.0.0",
    "django>=5.1.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.0",
    "pymemcache>=4.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sentry-sdk>=2.18.0",
    "whitenoise>=6.8.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.4",
    "coverage>=7.6.7",
    "faker>=33.0.0",
    "pre-commit>=4.0.1",
    "pydot>=3.0.2",
    "pyparsing>=3.2.0",
    "locust>=2.32.5",
]
